@@ -18,6 +18,8 @@ BETA PUBLIC RELEASE VERSION 1.2.1       X-XX-XX
     * Fixed error message that occurred when a blank line was found in a
       parameter file.
     * Better error handling in MOL2 file parsing.
+    * Fixed bug where ligands were not supported on PDB files with multiple
+      MODEL fields.
 #############################################################################
 BETA PUBLIC RELEASE VERSION 1.2.0       1-31-07
 #############################################################################
